--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>MEME MATCHING GAME</h1>
-        <p>This code was created by Matundu</p>
+        <p>This code was created by Kcee_thecoder</p>
         <p class="instructions">
             Welcome to the Meme Matching Game!  Flip over two cards at a time and try to find all the matching pairs. Be quick and remember where you saw the cards!
         </p>
